force-app/main/default/objects/Sponsorship__c/fields/Acknowledgment_Status__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Status__c</fullName>
    <label>Acknowledgment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Email Acknowledgment Now</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>