force-app/main/default/objects/Sponsorship__c/fields/Annual_Report_Sent__c.field-meta.xml
<CustomField>
    <fullName>Annual_Report_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Report Sent</label>
    <type>Checkbox</type>
</CustomField>