force-app/main/default/objects/Sponsorship__c/fields/Conga_Batch_test__c.field-meta.xml
<CustomField>
    <fullName>Conga_Batch_test__c</fullName>
    <formula>HYPERLINK(&quot;/apex/APXTConga4__Conga_Composer?ServerURL=&quot;+ $Api.Partner_Server_URL_370 + Orphan_Detail_Email__c,&quot;Test Conga Batch via User Interface&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Batch test</label>
    <type>Text</type>
</CustomField>