force-app/main/default/objects/Sponsorship__c/fields/Country_Logo__c.field-meta.xml
<CustomField>
    <fullName>Country_Logo__c</fullName>
    <formula>IF(Orphan_Country__c = &quot;North Macedonia&quot;,&quot;https://humanappeal--uat--c.visualforce.com/resource/Macedonia&quot;,
IF(Orphan_Country__c = &quot;Iraq&quot;,&quot;https://humanappeal--uat--c.visualforce.com/resource/Iraq&quot;,
IF(Orphan_Country__c = &quot;Somalia&quot;,&quot;https://humanappeal--uat--c.visualforce.com/resource/Somalia&quot;,
IF(Orphan_Country__c = &quot;Turkey&quot;,&quot;https://humanappeal--uat--c.visualforce.com/resource/Turkey&quot;,
IF(Orphan_Country__c = &quot;Lebanon&quot;,&quot;https://humanappeal--uat--c.visualforce.com/resource/Lebanon&quot;,
IF(Orphan_Country__c = &quot;Pakistan&quot;,&quot;https://humanappeal--uat--c.visualforce.com/resource/Pakistan&quot;,
IF(Orphan_Country__c = &quot;Palestine&quot;,&quot;https://humanappeal--uat--c.visualforce.com/resource/Palestine&quot;,
IF(Orphan_Country__c = &quot;Sri Lanka&quot;,&quot;https://humanappeal--uat--c.visualforce.com/resource/SriLanka&quot;,
IF(Orphan_Country__c = &quot;Yemen&quot;,&quot;https://humanappeal--uat--c.visualforce.com/resource/Yemen&quot;,&quot;&quot;)))))))
)
)</formula>
    <label>Country Logo</label>
    <type>Text</type>
</CustomField>