force-app/main/default/objects/Sponsorship__c/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <formula>YEAR(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>