force-app/main/default/objects/Sponsorship__c/fields/DMS_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_ID__c</fullName>
    <formula>Orphan__r.Sponsoree_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DMS Sponsoree ID</label>
    <type>Text</type>
</CustomField>