force-app/main/default/objects/Sponsorship__c/fields/DMS_Sponsorship_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Sponsorship_ID__c</fullName>
    <externalId>true</externalId>
    <label>DMS Sponsorship ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>