force-app/main/default/objects/Sponsorship__c/fields/Donation__c.field-meta.xml
<CustomField>
    <fullName>Donation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Donation</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sponsorships</relationshipLabel>
    <relationshipName>Sponsorships</relationshipName>
    <type>Lookup</type>
</CustomField>