force-app/main/default/objects/Sponsorship__c/fields/Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Donor_ID__c</fullName>
    <formula>Donor__r.Donor_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor ID</label>
    <type>Text</type>
</CustomField>