force-app/main/default/objects/Sponsorship__c/fields/Donor_Organization__c.field-meta.xml
<CustomField>
    <fullName>Donor_Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Donor (Organization)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sponsorships</relationshipLabel>
    <relationshipName>Sponsorships</relationshipName>
    <type>Lookup</type>
</CustomField>