force-app/main/default/objects/Sponsorship__c/fields/Donor_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Donor_Record_Id__c</fullName>
    <formula>Donor__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Record Id</label>
    <type>Text</type>
</CustomField>