force-app/main/default/objects/Sponsorship__c/fields/Donor_Regional_Office_Code__c.field-meta.xml
<CustomField>
    <fullName>Donor_Regional_Office_Code__c</fullName>
    <formula>text(Donor__r.Regional_Office_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Regional Office Code</label>
    <type>Text</type>
</CustomField>