force-app/main/default/objects/Sponsorship__c/fields/Email_Annual_Report__c.field-meta.xml
<CustomField>
    <fullName>Email_Annual_Report__c</fullName>
    <formula>&quot;&amp;id=&quot; +  Id  + 
&quot;&amp;TemplateId=a290C000000xN42&quot; + 
&quot;&amp;FP0=1&quot; + 
&quot;&amp;AC0=1&quot; + 
&quot;&amp;AC1=Invoice+for+&quot; +  Name  + 
&quot;&amp;QMode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Annual Report</label>
    <type>Text</type>
</CustomField>