force-app/main/default/objects/Sponsorship__c/fields/Field_Office_Orphan__c.field-meta.xml
<CustomField>
    <fullName>Field_Office_Orphan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Office(Orphan)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sponsorships (Field Office(Orphan))</relationshipLabel>
    <relationshipName>Sponsorships1</relationshipName>
    <type>Lookup</type>
</CustomField>