force-app/main/default/objects/Sponsorship__c/fields/First_Donation_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Donation_Received_Date__c</fullName>
    <formula>IF(NOT(ISNULL(Donation__c)),  Donation__r.CloseDate ,  IF(NOT(ISNULL( Recurring_Donation__c )),  Recurring_Donation__r.First_Donation_Received_Date__c , null) )</formula>
    <label>First Donation Received Date</label>
    <type>Date</type>
</CustomField>