force-app/main/default/objects/Sponsorship__c/fields/First_Donation_Received_Date_copy__c.field-meta.xml
<CustomField>
    <fullName>First_Donation_Received_Date_copy__c</fullName>
    <label>First Donation Received Date</label>
    <type>Date</type>
</CustomField>