force-app/main/default/objects/Sponsorship__c/fields/Instruction__c.field-meta.xml
<CustomField>
    <fullName>Instruction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instruction</label>
    <referenceTo>Instruction__c</referenceTo>
    <relationshipLabel>Sponsorships</relationshipLabel>
    <relationshipName>Sponsorships</relationshipName>
    <type>Lookup</type>
</CustomField>