force-app/main/default/objects/Sponsorship__c/fields/Orphan__c.field-meta.xml
<CustomField>
    <fullName>Orphan__c</fullName>
    <label>Orphan</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <errorMessage>Please select different Orphan</errorMessage>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Orphan</value>
        </filterItems>
        <filterItems>
            <field>Contact.Active_Sponsorships__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filterItems>
        <infoMessage>Select Orphan Contacts with no Sponsorships</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orphan Sponsorships</relationshipLabel>
    <relationshipName>Sponsoree</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>