force-app/main/default/objects/Sponsorship__c/fields/Orphan_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Account_Name__c</fullName>
    <formula>Orphan__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orphan Account Name</label>
    <type>Text</type>
</CustomField>