force-app/main/default/objects/Sponsorship__c/fields/Orphan_Country__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Country__c</fullName>
    <formula>TEXT(Orphan__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orphan Country</label>
    <type>Text</type>
</CustomField>