force-app/main/default/objects/Sponsorship__c/fields/Orphan_Detail_Email__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Detail_Email__c</fullName>
    <formula>&quot;&amp;Id=&quot;+Id+
&quot;&amp;QueryId=[OD]a210C000000rWGY&quot;+
&quot;&amp;TemplateId=a290C000000xN42&quot;+
&quot;&amp;CongaEmailTemplateId=a200C000000nSto&quot;+
&quot;&amp;SC0=1&quot;+
&quot;&amp;SC1=Attachments&quot; +
&quot;&amp;AC0=1&quot;+
&quot;&amp;AC1=Annual+report+for+&quot; + Orphan_First_Name__c + Orphan_Last_Name__c +
&quot;&amp;EmailToId=&quot; + Donor_Record_Id__c +
&quot;&amp;FP0=1&quot; +
&quot;&amp;EmailFromId=0D20C00000001sW&quot; +
&quot;&amp;QMode=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orphan Detail Email</label>
    <type>Text</type>
</CustomField>