force-app/main/default/objects/Sponsorship__c/fields/Orphan_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Orphan_First_Name__c</fullName>
    <formula>Orphan__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orphan First Name</label>
    <type>Text</type>
</CustomField>