force-app/main/default/objects/Sponsorship__c/fields/Orphan_First_Sponsorship_Date__c.field-meta.xml
<CustomField>
    <fullName>Orphan_First_Sponsorship_Date__c</fullName>
    <formula>Orphan__r.First_Sponsorship_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orphan: First Sponsorship Date</label>
    <type>DateTime</type>
</CustomField>