force-app/main/default/objects/Sponsorship__c/fields/Orphan_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Last_Name__c</fullName>
    <formula>Orphan__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orphan Last Name</label>
    <type>Text</type>
</CustomField>