force-app/main/default/objects/Sponsorship__c/fields/Orphan_Postal_Conga__c.field-meta.xml
<CustomField>
    <fullName>Orphan_Postal_Conga__c</fullName>
    <formula>&quot;&amp;Id=&quot;+Id+
&quot;&amp;QueryId=[OD]a210C0000012dmpQAA&quot;+
&quot;&amp;TemplateId=a290C000000y3KwQAI&quot;+
&quot;&amp;AC0=1&quot;+
&quot;&amp;AC1=Annual+report+for+&quot; + Orphan_First_Name__c + Orphan_Last_Name__c +
&quot;&amp;FP0=1&quot; +
&quot;&amp;DefaultPDF=1&quot;+
&quot;&amp;QMode=Download&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orphan Postal Conga</label>
    <type>Text</type>
</CustomField>