force-app/main/default/objects/Sponsorship__c/fields/profile__c.field-meta.xml
<CustomField>
    <fullName>profile__c</fullName>
    <formula>&quot;https://humanappeal--uat--c.visualforce.com/resource/profile&quot;</formula>
    <label>profile</label>
    <type>Text</type>
</CustomField>