force-app/main/default/objects/Sponsorship__c/fields/Recurring_Donation__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Recurring Donation</label>
    <referenceTo>npe03__Recurring_Donation__c</referenceTo>
    <relationshipLabel>Sponsorships</relationshipLabel>
    <relationshipName>Sponsorships</relationshipName>
    <type>Lookup</type>
</CustomField>