force-app/main/default/objects/Sponsorship__c/fields/Regional_Office_Code_Donor__c.field-meta.xml
<CustomField>
    <fullName>Regional_Office_Code_Donor__c</fullName>
    <label>Regional Office Code(Donor)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>