force-app/main/default/objects/Sponsorship__c/fields/Renewal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Due_Date__c</fullName>
    <label>Renewal Due Date</label>
    <type>DateTime</type>
</CustomField>